--- a/config/development.conf
+++ b/config/development.conf
@@ -2,9 +2,7 @@ PORT=8081
 AUTH_SECRET=secret_key
 POSTGRES_HOST=host.docker.internal
 POSTGRES_DB=fluffy_development
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_USER=fluffy
+POSTGRES_PASSWORD=pass
 POSTGRES_PORT=5431
-GOOSE_DRIVER=postgres
-GOOSE_DBSTRING="user=postgres password=postgres dbname=fluffy_development port=5431 host=host.docker.internal"
 HASH_COST=14
