--- a/config/test.conf
+++ b/config/test.conf
@@ -2,9 +2,7 @@ PORT=8081
 AUTH_SECRET=secret_key
 POSTGRES_HOST=postgresql-test
 POSTGRES_DB=fluffy_test
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_USER=fluffy
+POSTGRES_PASSWORD=pass
 POSTGRES_PORT=5432
-GOOSE_DRIVER=postgres
-GOOSE_DBSTRING="postgres://postgres:postgres@postgresql-test:5432/fluffy_test?sslmode=disable"
 HASH_COST=14
