--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -24,14 +24,17 @@ services:
     networks:
       - test-network
 
-  atlas-test:
-    image: arigaio/atlas
-    command: [ "schema", "apply", "--env", "test" ]
-    volumes:
-      - ./atlas.hcl:/app/atlas.hcl
-    networks:
-      - test-network
-    working_dir: /app
+  # atlas-test:
+  #   image: arigaio/atlas
+  #   command: [ "schema", "apply", "--env", "test" ]
+  #   volumes:
+  #     - ./atlas.hcl:/app/atlas.hcl
+  #     - ./schema.sql:/app/schema.sql
+  #   networks:
+  #     - test-network
+  #   env_file:
+  #     - config/test.conf
+  #   working_dir: /app
 
 volumes:
   postgres_test_data:
